<resources>
    <string name="app_name">ScreenSpace</string>
    <string name="ScreenSpace">ScreenSpace</string>
    <string name="Bienvenido">¡Bienvenido!</string>
    <string name="CrearCuenta">Crear Cuenta</string>
    <string name="IniciarSesion">Iniciar Sesion Admin</string>
    <string name="IngresarGoogle">Ingresar con Google</string>
    <string name="Back">Back</string>
    <string name="IngreseSuEmailYContrasena">Ingrese su email y contraseña</string>
    <string name="email">Email</string>
    <string name="IngresarEmail">ejemplo@ejemplo.com</string>
    <string name="Contrasena">Contraseña</string>
    <string name="IngresarContrasena">********</string>
    <string name="CuentaCreadaExito">¡Cuenta creada exitosamente!</string>
    <string name="MenuPrincipal">Menu Principal</string>
    <string name="OlvidoContrasena">OLVIDÉ MI CONTRASEÑA</string>
    <string name="CambiarContrasena">Cambiar contraseña</string>
    <string name="ContrasenaCambiada">Se le envió un mail con el cambio de contraseña.</string>
    <string name="Registrarse">Registrarse</string>
    <string name="RegistrarseTexto">Ingrese los datos para crear una nueva cuenta.</string>
    <string name="RecuperoContraseña">Recupero de contraseña</string>
    <string name="EmailEnviado">Email enviado</string>
    <string name="Inicio">Inicio</string>
    <string name="CerrarSesion">Cerrar sesion</string>
    <string name="TusCines">Tus Cines</string>
    <string name="TusSalas">Tus Salas</string>
    <string name="CrearSala">Crear Sala</string>
    <string name="ModificarSalas">Modificar salas</string>
    <string name="Direccion">Direccion</string>
    <string name="Nombre">Nombre</string>
    <string name="PrecioEntrada">Precio entrada</string>
    <string name="DimensionesSala">Dimensiones de la sala</string>
    <string name="Filas">Filas</string>
    <string name="Columnas">Columnas</string>
    <string name="IngreseNombreYFoto">Ingrese su nombre y foto de perfil</string>
    <string name="Actualizar">Actualizar</string>
    <string name="EliminarPerfil">Eliminar perfil</string>
    <string name="PerfilActualizadoExito">Perfil actualizado con exito</string>
    <string name="CrearCuentaAdmin">Crear cuenta admin</string>
    <string name="leyendaIniciarsesion">Inicia sesion para poder gestionar tus salas de cine</string>
    <string name="IniciarSecionAdmin">INICIAR SESION ADMIN</string>
    <string name="IngreselosdatosString">Ingrese los datos para crear una nueva cuenta</string>
    <string name="RecuperoContrasena">Recupero de contraseña</string>
    <string name="Ingresesuemail">Ingrese su email</string>
    <string name="Recuperar">Recuperar</string>
    <string name="EliminarCuenta">Eliminar Cuenta</string>
    <string name="Opciones">Opciones</string>
    <string name="eliminarcuentapregunta">¿Esta seguro que desea eliminar la cuenta?</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="NombreCine">Nombre Cine</string>
    <string name="Calle">Calle</string>
    <string name="Numero">Numero</string>
    <string name="Barrio">Barrio</string>
    <string name="Localidad">Localidad</string>
    <string name="Provincia">Provincia</string>
    <string name="Pais">Pais</string>
    <string name="Empresa">Empresa</string>
    <string name="CrearCine">Crear Cine</string>
    <string name="GuardarCambios">Guardar Cambios</string>
    <string name="EliminarCine">Eliminar Cine</string>
    <string name="EliminarCinetitulo">¿Esta seguro que desea eliminar el cine?</string>
    <string name="EliminarCinedesc">Recuerde que junto a el se eliminarán las salas vinculadas a este</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="VerFunciones">Ver funciones</string>
    <string name="EliminarSala">Eliminar Sala</string>
    <string name="Configuracion">Configuracion</string>
    <string name="ingresenuevacontrasena">Ingrese su nueva contraseña</string>
    <string name="Contrasenacambiadaexitosamente">¡Contraseña cambiada exitosamente!</string>
    <string name="NuevaContrasena">Nueva contraseña</string>
    <string name="ReservaExitosa">Reserva Exitosa</string>
    <string name="reservaexitosadescrip">En los proximos minutos recibirá un mail con los detalles de su reserva</string>
    <string name="Reservar">Reservar</string>
    <string name="EditarFuncion">Editar Funciones</string>
    <string name="ModificarFuncion">Modificar Funcion</string>
    <string name="AgregarFuncion">Agregar Funcion</string>
    <string name="Fecha">Fecha</string>
    <string name="Hora">Hora</string>
    <string name="Pelicula">Pelicula</string>
    <string name="SinInternet">Sin conexion a internet</string>
    <string name="Servidores">Lo sentimos, servidores en mantenimiento</string>
    <string name="VolverAIntentar">Volver a intentar</string>
    <string name="Resena">Reseña</string>
    <string name="ResenaEnviada">Reseña enviada</string>
    <string name="ResenaDesc">¡Gracias por dejar tu opinión. es muy valiosa!</string>
    <string name="resenaEscribir">Escribe tu reseña aquí...</string>
    <string name="Puntuacion">Puntuación</string>
    <string name="Enviar">Enviar</string>
    <string name="CantidadEntradas">Cantidad de entradas</string>
    <string name="Pantalla">Pantalla</string>

</resources>