<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackApp"
    tools:context=".Login">

    <Button
        android:id="@+id/button4"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/blueApp"
        android:onClick="IniciarSesion"
        android:text="@string/IniciarSesion"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/IniciarSecionAdmin"
        android:textColor="@color/whiteApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="349dp"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/leyendaIniciarsesion"
        android:textColor="@color/whiteApp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="31dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="340dp"
        android:layout_height="210dp"
        android:layout_marginTop="52dp"
        android:background="@color/whiteApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/Contrasena"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/IngresarEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/IngresarContrasena"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="37dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="@mipmap/backbutton"
        android:onClick="Volver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="207dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/OlvidoContrasena"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>