<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackApp"
    tools:context=".Crear_Cuenta">

    <Button
        android:id="@+id/button5"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/blueApp"
        android:onClick="CrearCuenta"
        android:text="@string/CrearCuentaAdmin"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="327dp"
        android:layout_height="454dp"
        android:layout_marginTop="80dp"
        android:background="@color/whiteApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/Contrasena"
        android:textColor="@color/blueApp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:text="@string/email"
        android:textColor="@color/blueApp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="254dp"
        android:layout_height="37dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:background="@color/inputBack"
        android:ems="10"
        android:hint="@string/IngresarContrasena"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="253dp"
        android:layout_height="35dp"
        android:layout_marginStart="36dp"
        android:background="@color/inputBack"
        android:ems="10"
        android:hint="@string/IngresarEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/Registrarse"
        android:textColor="@color/blueApp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/IngreselosdatosString"
        android:textColor="@color/blackApp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@mipmap/backbutton"
        android:onClick="Volver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/backbutton" />
</androidx.constraintlayout.widget.ConstraintLayout>