<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackApp"
    tools:context=".Modificar_Sala">

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@mipmap/backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/backbutton" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="327dp"
        android:layout_height="308dp"
        android:layout_marginTop="100dp"
        android:background="@color/whiteApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/ModificarSalas"
        android:textColor="@color/whiteApp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName15"
        android:layout_width="290dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:background="@color/inputBack"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView60"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="@+id/textView55"
        app:layout_constraintTop_toBottomOf="@+id/textView63" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/DimensionesSala"
        android:textColor="@color/blueApp"
        app:layout_constraintStart_toStartOf="@+id/textView60"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName22" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="256dp"
        android:text="@string/Nombre"
        android:textColor="@color/blueApp"
        app:layout_constraintEnd_toEndOf="@+id/textView55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView60" />

    <Button
        android:id="@+id/button19"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blueApp"
        android:text="@string/VerFunciones"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView60" />

    <Button
        android:id="@+id/button20"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blueApp"
        android:text="@string/GuardarCambios"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button19" />

    <Button
        android:id="@+id/button21"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/redApp"
        android:text="@string/EliminarSala"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="220dp"
        android:text="@string/PrecioEntrada"
        android:textColor="@color/blueApp"
        app:layout_constraintEnd_toEndOf="@+id/textView55"
        app:layout_constraintStart_toStartOf="@+id/textView60"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName15" />

    <EditText
        android:id="@+id/editTextTextPersonName20"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/inputBack"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView27"
        app:layout_constraintStart_toStartOf="@+id/textView60"
        app:layout_constraintTop_toBottomOf="@+id/textView66" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/Filas"
        android:textColor="@color/blueApp"
        app:layout_constraintStart_toStartOf="@+id/textView60"
        app:layout_constraintTop_toBottomOf="@+id/textView62" />

    <EditText
        android:id="@+id/editTextTextPersonName21"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:layout_marginEnd="24dp"
        android:background="@color/inputBack"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView60"
        app:layout_constraintTop_toBottomOf="@+id/textView67" />

    <TextView
        android:id="@+id/textView67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="88dp"
        android:text="@string/Columnas"
        android:textColor="@color/blueApp"
        app:layout_constraintEnd_toEndOf="@+id/textView60"
        app:layout_constraintTop_toBottomOf="@+id/textView62" />

    <EditText
        android:id="@+id/editTextTextPersonName22"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:background="@color/inputBack"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView60"
        app:layout_constraintTop_toBottomOf="@+id/textView65" />
</androidx.constraintlayout.widget.ConstraintLayout>