<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackApp"
    tools:context=".Olvido_Pass">

    <Button
        android:id="@+id/button7"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/blueApp"
        android:onClick="Recuperar"
        android:text="@string/Recuperar"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="327dp"
        android:layout_height="454dp"
        android:layout_marginTop="80dp"
        android:background="@color/whiteApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="271dp"
        android:layout_height="96dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/RecuperoContrasena"
        android:textColor="@color/blueApp"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/textView19"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:text="@string/Ingresesuemail"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="265dp"
        android:layout_height="38dp"
        android:background="@color/inputBack"
        android:ems="10"
        android:hint="@string/IngresarEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textView19"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />
</androidx.constraintlayout.widget.ConstraintLayout>