<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackApp"
    tools:context=".Cambiar_Pass">

    <Button
        android:id="@+id/button26"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/blueApp"
        android:onClick="CambiarPass"
        android:text="@string/Inicio"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView75" />

    <TextView
        android:id="@+id/textView75"
        android:layout_width="327dp"
        android:layout_height="454dp"
        android:layout_marginTop="80dp"
        android:background="@color/whiteApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView76"
        android:layout_width="271dp"
        android:layout_height="167dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/ingresenuevacontrasena"
        android:textColor="@color/blueApp"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/textView75"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/textView75"
        app:layout_constraintTop_toTopOf="@+id/textView75" />

    <TextView
        android:id="@+id/textView77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/NuevaContrasena"
        app:layout_constraintEnd_toEndOf="@+id/textView75"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="@+id/textView75"
        app:layout_constraintTop_toBottomOf="@+id/textView76" />

    <EditText
        android:id="@+id/editTextTextPersonName24"
        android:layout_width="235dp"
        android:layout_height="39dp"
        android:background="@color/inputBack"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/IngresarContrasena"
        app:layout_constraintEnd_toEndOf="@+id/textView75"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="@+id/textView75"
        app:layout_constraintTop_toBottomOf="@+id/textView77" />

</androidx.constraintlayout.widget.ConstraintLayout>