<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackApp"
    tools:context=".Eliminar_Cine">

    <TextView
        android:id="@+id/textView48"
        android:layout_width="327dp"
        android:layout_height="454dp"
        android:layout_marginTop="80dp"
        android:background="@color/whiteApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="303dp"
        android:layout_height="132dp"
        android:gravity="center"
        android:text="@string/EliminarCinetitulo"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/textView48"
        app:layout_constraintStart_toStartOf="@+id/textView48"
        app:layout_constraintTop_toTopOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="283dp"
        android:layout_height="76dp"
        android:gravity="center"
        android:text="@string/EliminarCinedesc"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView48"
        app:layout_constraintStart_toStartOf="@+id/textView48"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="190dp"
        android:layout_height="181dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/alerta"
        app:layout_constraintEnd_toEndOf="@+id/textView48"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/textView48"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <Button
        android:id="@+id/button16"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blueApp"
        android:onClick="Cancelar"
        android:text="@string/Cancelar"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <Button
        android:id="@+id/button17"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/redApp"
        android:onClick="Aceptar"
        android:text="@string/Aceptar"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button16" />
</androidx.constraintlayout.widget.ConstraintLayout>